--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -27,4 +27,11 @@
         <item name="android:homeAsUpIndicator">@drawable/back_button_image</item>
     </style>
 
+    <style name="ToolbarSettings" parent="android:Theme.Holo">
+        <item name="android:homeAsUpIndicator">@drawable/ic_baseline_arrow_forward_24</item>
+        <item name="android:paddingLeft">330dp</item>
+    </style>
+
+
+
 </resources>
