--- a/app/src/main/res/layout/activity_swipe.xml
+++ b/app/src/main/res/layout/activity_swipe.xml
@@ -44,7 +44,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/guideline33"
             app:layout_constraintVertical_bias="0.0"
-            app:srcCompat="@mipmap/settings_icon_foreground" />
+            app:srcCompat="@drawable/ic_settings_swipe" />
 
         <ImageView
             android:id="@+id/imageView"
@@ -53,7 +53,8 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/guideline33"
+            app:layout_constraintVertical_bias="0.100000024"
             app:srcCompat="@drawable/orangepaw" />
 
         <ImageButton
@@ -70,11 +71,11 @@
             app:layout_constraintStart_toEndOf="@+id/imageView"
             app:layout_constraintTop_toTopOf="@+id/guideline33"
             app:layout_constraintVertical_bias="0.0"
-            app:srcCompat="@mipmap/bell_icon_foreground" />
+            app:srcCompat="@drawable/ic_notifications" />
 
         <ImageView
             android:id="@+id/iv_notifdot"
-            android:layout_width="38dp"
+            android:layout_width="20dp"
             android:layout_height="24dp"
             android:visibility="visible"
             app:layout_constraintEnd_toEndOf="@+id/ib_opennotifs"
