--- a/app/src/main/res/layout/chat_layout.xml
+++ b/app/src/main/res/layout/chat_layout.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/white"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:padding="4dp">
 
     <TextView
         android:id="@+id/tv_sender"
@@ -14,14 +15,17 @@
         android:layout_marginTop="0dp"
         android:layout_marginBottom="8dp"
         android:textColor="@color/black"
+        android:textSize="16sp"
         android:textStyle="bold"
         tools:text="User says:" />
 
     <TextView
         android:id="@+id/tv_message"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:background="@drawable/chat_layout_border_orange"
+        android:padding="6dp"
         android:text="TextView"
         android:textAlignment="viewStart"
         android:textColor="@color/black"
