--- a/app/src/main/res/layout/activity_post_register_upload_photos.xml
+++ b/app/src/main/res/layout/activity_post_register_upload_photos.xml
@@ -134,6 +134,20 @@
 
         </LinearLayout>
 
+        <ProgressBar
+            android:id="@+id/pb_post_register_upload"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:indeterminate="true"
+            android:indeterminateDrawable="@drawable/my_progress_indeterminate"
+            android:translationZ="10dp"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <ImageButton
@@ -170,4 +184,5 @@
         app:layout_constraintEnd_toStartOf="@+id/gl_right"
         app:layout_constraintStart_toStartOf="@+id/gl_left"
         app:layout_constraintTop_toBottomOf="@+id/tv_post_register_text" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
