--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -20,45 +20,6 @@
         app:layout_constraintStart_toEndOf="@+id/btn_settings_log_out"
         app:layout_constraintTop_toTopOf="@+id/btn_settings_log_out" />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/cl_settings_child_incognito"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:background="@drawable/layout_border"
-        app:layout_constraintEnd_toStartOf="@+id/gl_settings_right"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/gl_settings_left"
-        app:layout_constraintTop_toBottomOf="@+id/cl_settings_profile_activity">
-
-        <TextView
-            android:id="@+id/tv_settings_incognito"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:padding="10dp"
-            android:text="Dark mode"
-            android:textColor="@color/black"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <Switch
-            android:id="@+id/switch_theme"
-            android:layout_width="wrap_content"
-            android:layout_height="20dp"
-            android:layout_marginTop="6dp"
-            android:layout_marginEnd="4dp"
-            android:background="@null"
-            android:text=""
-            android:thumbTint="@color/white"
-            android:trackTint="@color/black"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/gl_settings_left"
         android:layout_width="wrap_content"
@@ -95,13 +56,13 @@
         android:id="@+id/cl_settings_child_notification"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="16dp"
         android:background="@drawable/layout_border"
         android:padding="0dp"
         app:layout_constraintEnd_toStartOf="@+id/gl_settings_right"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/gl_settings_left"
-        app:layout_constraintTop_toBottomOf="@+id/cl_settings_child_incognito">
+        app:layout_constraintTop_toBottomOf="@+id/cl_settings_profile_activity">
 
         <Switch
             android:id="@+id/switch_notifications"
@@ -111,8 +72,8 @@
             android:layout_marginEnd="4dp"
             android:background="@null"
             android:text=""
-            android:thumbTint="@color/white"
-            android:trackTint="@color/black"
+            android:thumbTint="@drawable/switch_tracker"
+            android:trackTint="@drawable/switch_tracker"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
