--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,17 +1,21 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Tindergree" parent="Theme.AppCompat.NoActionBar">
+    <style name="Theme.Tindergree" parent="Theme.AppCompat.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/orangeAppColor</item>
         <item name="colorPrimaryVariant">@color/orangeAppColor</item>
         <item name="colorOnPrimary">@color/orangeAppColor</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/orangeAppColor</item>
-        <item name="colorSecondaryVariant">@color/orangeAppColor</item>
-        <item name="colorOnSecondary">@color/orangeAppColor</item>
+        <item name="colorSecondary">@color/white</item>
+        <item name="colorSecondaryVariant">@color/white</item>
+        <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor">@color/orangeAppColor</item>
         <!-- Customize your theme here. -->
+        <item name="background_color">@color/white</item>
+        <item name="text_color">@color/black</item>
+        <item name="secondary_background">@color/colorSecondary</item>
+        <item name="tertiary_background">@color/lightGray</item>
     </style>
 
 
