--- a/app/src/main/res/layout/activity_profile_page.xml
+++ b/app/src/main/res/layout/activity_profile_page.xml
@@ -20,7 +20,8 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:background="?attr/background_color">
 
 
 
@@ -38,8 +39,7 @@
                     android:id="@+id/profile_page_toolbar"
                     android:layout_width="match_parent"
                     android:layout_height="80dp"
-                    android:background="@color/white"
-                    android:backgroundTint="@color/white"
+                    android:background="?attr/background_color"
                     android:paddingTop="16dp"
                     android:theme="@style/ToolbarTheme"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -134,7 +134,7 @@
         android:fontFamily="sans-serif-condensed-medium"
         android:gravity="center"
         android:text="Photos"
-        android:textColor="#000000"
+        android:textColor="?attr/text_color"
         android:textSize="25sp"
         app:layout_constraintEnd_toStartOf="@+id/guideline28"
         app:layout_constraintHorizontal_bias="0.0"
@@ -147,7 +147,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-condensed-light"
         android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam sagittis orci turpis, vel placerat lectus varius eget. Maecenas nisi dolor, ultrices vitae augue ac, faucibus lacinia erat."
-        android:textColor="#000000"
+        android:textColor="?attr/text_color"
         app:layout_constraintEnd_toStartOf="@+id/guideline28"
         app:layout_constraintStart_toStartOf="@+id/guideline27"
         app:layout_constraintTop_toTopOf="@+id/guideline30" />
@@ -157,6 +157,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
+        android:background="?attr/background_color"
         android:foreground="@layout/border_layout"
         app:layout_constraintEnd_toStartOf="@+id/guideline32"
         app:layout_constraintHorizontal_bias="0.4"
