--- a/app/src/main/res/layout/activity_swipe.xml
+++ b/app/src/main/res/layout/activity_swipe.xml
@@ -2,9 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/cl_main1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFFFF"
+    android:background="?attr/background_color"
     tools:context=".Activities.SwipeActivity">
 
     <com.yuyakaido.android.cardstackview.CardStackView
@@ -36,7 +37,7 @@
             android:layout_height="53dp"
             android:layout_marginStart="50dp"
             android:layout_marginEnd="50dp"
-            android:backgroundTint="#FFFFFF"
+            android:backgroundTint="?attr/background_color"
             android:scaleType="centerCrop"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/imageView"
@@ -65,7 +66,7 @@
             android:layout_marginStart="50dp"
             android:layout_marginEnd="50dp"
 
-            android:backgroundTint="#FFFFFF"
+            android:backgroundTint="?attr/background_color"
             android:scaleType="centerCrop"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -112,14 +113,14 @@
         style="?android:attr/progressBarStyle"
         android:layout_width="63dp"
         android:layout_height="63dp"
+        android:indeterminate="true"
+        android:indeterminateDrawable="@drawable/my_progress_indeterminate"
         android:translationZ="10dp"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:indeterminate="true"
-        android:indeterminateDrawable="@drawable/my_progress_indeterminate"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tv_swipesysnotif"
@@ -127,7 +128,7 @@
         android:layout_height="20dp"
         android:text="That's all for now! Come back for more."
         android:textAlignment="textStart"
-        android:textColor="#000000"
+        android:textColor="?attr/text_color"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
