--- a/app/src/main/res/layout/circlebutton_layout.xml
+++ b/app/src/main/res/layout/circlebutton_layout.xml
@@ -8,7 +8,7 @@
     </item>
     <item android:state_pressed = "true">
         <shape android:shape = "oval">
-            <solid android:color = "#000000"/>
+            <solid android:color = "?attr/background_color"/>
         </shape>
     </item>
 </selector>
