--- a/app/src/main/res/layout/match_request_layout.xml
+++ b/app/src/main/res/layout/match_request_layout.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#F6F6F6">
+    android:background="?attr/background_color">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -84,7 +84,7 @@
             android:gravity="start"
             android:shadowColor="#000000"
             android:text="mrName"
-            android:textColor="#000000"
+            android:textColor="?attr/text_color"
             android:textSize="20sp"
             app:layout_constraintEnd_toStartOf="@+id/guideline41"
             app:layout_constraintHorizontal_bias="0.0"
@@ -99,7 +99,7 @@
             android:gravity="start"
             android:shadowColor="#000000"
             android:text="wants to match with you!"
-            android:textColor="#000000"
+            android:textColor="?attr/text_color"
             android:textSize="16sp"
             app:layout_constraintEnd_toStartOf="@+id/guideline41"
             app:layout_constraintHorizontal_bias="0.0"
