--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,10 +6,20 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
+    <color name="darkblue">#081033</color>
     <color name="white">#ffffff</color>
     <color name="peach">#FFDAB9</color>
     <color name="gray">#cfcfcf</color>
     <color name="lightGray">#dbdbdb</color>
+    <color name="darkGray">#555454</color>
     <color name="red">#a60210</color>
     <color name="orangeAppColor">#FF914D</color>
+    <color name="colorPrimary">#ffffff</color>
+    <color name="colorPrimaryDark">#081033</color>
+    <color name="colorAccent">#03DAC5</color>
+    <color name="background">#ffffff</color>
+    <color name="textColor">#000000</color>
+    <color name="colorSecondary">#F8FFF0</color>
+    <color name="colorSecondaryDark">#222842</color>
+
 </resources>
