--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -56,13 +56,13 @@
         android:id="@+id/cl_settings_child_notification"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="12dp"
         android:background="@drawable/layout_border"
         android:padding="0dp"
         app:layout_constraintEnd_toStartOf="@+id/gl_settings_right"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/gl_settings_left"
-        app:layout_constraintTop_toBottomOf="@+id/cl_settings_profile_activity">
+        app:layout_constraintTop_toBottomOf="@+id/cl_settings_child_dark">
 
         <Switch
             android:id="@+id/switch_notifications"
@@ -96,7 +96,7 @@
         android:id="@+id/cl_settings_child_dark"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="120dp"
+        android:layout_marginTop="12dp"
         android:background="@drawable/layout_border"
         android:padding="0dp"
         app:layout_constraintEnd_toStartOf="@+id/gl_settings_right"
@@ -213,7 +213,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
-        android:background="@drawable/layout_border_orange"
+        android:background="@drawable/layout_border"
         app:layout_constraintEnd_toStartOf="@+id/gl_settings_right"
         app:layout_constraintStart_toStartOf="@+id/gl_settings_left"
         app:layout_constraintTop_toBottomOf="@+id/cl_settings_header">
@@ -234,9 +234,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
-            android:padding="15dp"
+            android:padding="10dp"
             android:text="Update profile"
-            android:textColor="@color/white"
+            android:textColor="?attr/text_color"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
